<resources>

    <string name="app_name">天天食惠</string>

    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pull_up_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="loading_no_more">没有更多数据了</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="user_farmer_login">农夫口袋账号登陆</string>
    <string name="user_regist">注册</string>
    <string name="username_login_hint">请输入手机号</string>
    <string name="username_login_pass_hint">请输入密码</string>
    <string name="user_login">登陆</string>

    <string name="dialog_default_title">Hello message!</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>

    <string name="help_question">问题：</string>
    <string name="help_answer">回答：</string>
    <string name="help_question1">什么是积分，积分有什么用</string>
    <string name="help_answer1">积分累积到一定数量，可以免费兑换超值商品，1000积分约等于一元，具体可登陆天天食惠官方网站（www.kuigou.net），在“积分商城”查看，感谢您对天天食惠的支持！</string>
    <string name="help_question2">如何购买</string>
    <string name="help_answer2">点击查看商品详情，点击“立即购买”按钮，即可登录淘宝并购买。</string>
    <string name="help_question3">关于签到</string>
    <string name="help_answer3">每日在天天食惠客户端签到可获得积分，第一次签到领取5积分，连续签到每天增加5积分，连续七天以上签到可获得40积分哦，如果签到中断，又会从5积分开始，遇到签到失败的情况，请尝试重新登录。</string>
    <string name="help_question4">为什么宝贝价格和在淘宝看到的不一致</string>
    <string name="help_answer4">部分卖家会使用淘宝提供的优惠方式进行活动，如果您看到价格不一致，那可能就是该宝贝使用以下折扣方式：拍下改价，VIP价格，优惠券价格。是否是拍下改价，VIP价格，优惠券价格宝贝，天天食惠会在宝贝标题描述中进行提示。</string>

    <string name="weibosdk_demo_toast_auth_success">授权成功</string>

    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>

    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>

    <string name="weibosdk_demo_toast_obtain_code_success">获取 Code 成功</string>

    <string name="weibosdk_demo_toast_obtain_code_failed">获取 Code 失败</string>

    <string name="weibosdk_demo_toast_obtain_token_success">获取 Token 成功</string>

    <string name="weibosdk_demo_toast_obtain_token_failed">获取 Token 失败</string>

    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>

    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>

</resources>
